syntax = "proto3";

option csharp_namespace = "Infrastructure.GRPC.Protos";

package dineoutpromotionsservice;

service DeliveryChargeWaiver {
  rpc GetDeliveryChargeWaiver(DeliveryChargeWaiverRequest) returns (DeliveryChargeWaiverResponse);
}

message DeliveryChargeWaiverRequest {
  string customer_id = 1;
  double order_amount = 2;
}

message DeliveryChargeWaiverResponse {
  bool eligible_for_waiver = 1;
  double waived_amount = 2;
  string message = 3;
}
